[build-system]
build-backend = "hatchling.build"
requires = [
    "hatch-fancy-pypi-readme",
    "hatch-vcs",
    "hatchling",
]

[project]
name = "cmomy"
description = "Central (co)moment calculation/manipulation"
keywords = [
    "cmomy",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dynamic = [
    "readme",
    "version",
]
dependencies = [
    "docstring-inheritance",
    "lazy-loader",
    "module-utilities>=0.10.1",
    "numba>=0.58",
    "numpy>1.24",
    "typing-extensions>=4.10.0",
    "xarray>=2023.9.0",
]
urls.Documentation = "https://pages.nist.gov/cmomy/"
urls.Homepage = "https://github.com/usnistgov/cmomy"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "test-notebook" },
    { include-group = "typecheck" },
]
test = [
    "pytest-cov",
    "pytest-env",
    "pytest-sugar",
    { include-group = "pytest" },
    { include-group = "test-scipy" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
]
# other packages/tools
ipython = [ "ipython" ]
mypy = [ "mypy>=1.15.0", "orjson" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2025.5.1" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
# other environments
numpy1 = [ "numpy<2.0" ]
numpy2 = [ "numpy>2.0" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
test-extras = [
    { include-group = "test" },
]
test-notebook = [
    "dask[diagnostics]",
    "nbval",
    { include-group = "test" },
]
test-scipy = [
    "dask; python_version=='3.13'",
    "scipy; python_version=='3.13'",
]
typecheck = [
    "pandas-stubs",
    { include-group = "pylint" },
    { include-group = "pytest" },
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build]
exclude = [
    ".*_cache",
]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [
    { path = "README.md" },
    { path = "CHANGELOG.md" },
    { path = "LICENSE" },
]

[tool.nbqa.exclude]
codespell = "^examples/archived"

[tool.repo-review]
ignore = [
    "GH",    # enable for actions
    "PC140", # do this externally
    "PC170", # pygrep
    "PC901", # ci message
    "RTD",
]

[tool.check-wheel-contents]
toplevel = [
    "cmomy",
]
src_dir = [
    "src",
]
package_omit = [
    ".*",
    "*.pyc",
    "*.pyo",
    "*.nbc",
    "__pycache__/*",
    "*.egg-info",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--pyargs",
    "--cov-config=pyproject.toml",
    # "--log-cli-level=INFO",
    # "-n",
    # "4",
]
testpaths = [
    "README.md",
    "cmomy",
    "tests",
]
markers = [
    "scipy: test scipy dependent code",
]
minversion = "8"
log_cli_level = "INFO"
xfail_strict = true
filterwarnings = [
    "error",
    "ignore: __array__ implementation doesn't accept a copy keyword:DeprecationWarning",
    "ignore: FNV hashing is not implemented in Numba:UserWarning",
    "ignore: Module cmomy was never imported:coverage.exceptions.CoverageWarning",       # test-notebook issue
    "ignore: No data was collected:coverage.exceptions.CoverageWarning",                 # test-notebook issue
]

[tool.pytest_env]
NUMBA_CACHE_DIR = { value = "{PWD}/.numba_cache", transform = true, skip_if_set = true }

[tool.coverage.run]
branch = true

[tool.coverage.report]
# show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
omit = [
    "*/vendored/*",
    "*/options.py",
    # No great way to test coverage of guvectorized functions...
    "*/_lib/*.py",
    "*/core/typing_nested_sequence.py",
]
include = [
    "src/*",
]

[tool.coverage.paths]
source = [
    "src/",
    ".nox/**/site-packages/",
]

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
files = [
    "src",
    "tests",
]
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
exclude = [
    ".eggs",
    ".tox",
    "doc",
    "docs",
    ".nox",
    ".numba_cache",
]
check_untyped_defs = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
always_true = [ "MYPY_ONLY" ]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "numba.*",
    "scipy.*",
    "scipy.special.*",
    "scipy.stats.*",
    "dask.*",
]

# [[tool.mypy.overrides]]
# ignore_errors = true
# module = [  ]

# [[tool.mypy.overrides]]
# # mypy doesn't like how we handle default values of TypeVars
# disable_error_code = ["misc"]
# module = ["cmomy.*"]

[tool.pyright]
# Enable this option to pick out unused `# pyright: ignore[...]`
# reportUnnecessaryTypeIgnoreComment = true
defineConstant = { MYPY_ONLY = false }
include = [
    "src",
    "tests",
]
strict = [
    "noxfile.py",
    "tools/*.py",
    "./src/cmomy/*.py",
    "./src/cmomy/core/prob.py",
    "./src/cmomy/core/typing_compat.py",
    "./src/cmomy/core/missing.py",
    "./src/cmomy/core/compat.py",
    "./src/cmomy/core/array_utils.py",
    # "./src/cmomy/core/typing_nested_sequence.py",
    "./src/cmomy/core/moment_params.py",
    "./src/cmomy/core/__init__.py",
    # "./src/cmomy/core/formatting.py",
    "./src/cmomy/core/docstrings.py",
    "./src/cmomy/core/validate.py",
    "./src/cmomy/core/xr_utils.py",
    "./src/cmomy/core/utils.py",
    "./src/cmomy/core/typing.py",
    "./src/cmomy/core/prepare.py",
    "./src/cmomy/resample/*.py",
    "./src/cmomy/wrapper/*.py",
    "./src/cmomy/grouped/*.py",
]
exclude = [
    "**/__pycache__",
    ".tox/**",
    ".nox/**",
    ".venv/**",
    "**/.mypy_cache",
    "**/.numba_cache",
    # "tools/auto_test_typing.py",
]
# strict = ["src", "tests", "noxfile.py", "tools/*.py"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
# enable subset of "strict"
reportDuplicateImport = true
reportInvalidStubStatement = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true
reportUnusedImport = true
# disable subset of "basic"
reportGeneralTypeIssues = false
reportMissingModuleSource = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPrivateImportUsage = false
reportUnboundVariable = false
# Needed for pep728 support for TypeDict(closed=...)
enableExperimentalFeatures = true

[tool.pytype]
inputs = [
    "src",
    "tests",
]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
lazy-loader = { skip = true, packages = "lazy_loader" }

[tool.pyproject2conda.envs.dev]
groups = [ "dev" ]
python = "default"

[tool.pyproject2conda.envs.test]
groups = [ "test" ]
python = "all"

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be used with uvx ...
    "conda-lock>=2.5.5",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "pre-commit>=4.0.0",
    "pre-commit-uv",
    "pyrefly",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty",
]
groups = [
    "mypy",
    "nox",
]
skip-package = true
style = "requirements"

[tool.pyproject2conda.envs.build]
groups = "build-system.requires"
skip-package = true
style = "requirements"

[tool.pyproject2conda.envs.test-extras]
groups = [ "test-extras" ]
skip-package = true
python = "all"

# * uv -------------------------------------------------------------------------

[tool.uv]
managed = true
default-groups = [ "dev", "numpy2" ]
fork-strategy = "requires-python"
conflicts = [
    [
        { group = "numpy1" },
        { group = "numpy2" },
    ],
]
required-version = ">=0.7.15"

[tool.uv.pip]
annotation-style = "line"
generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.12"
docs.requires-python = ">=3.12"
docs-live.requires-python = ">=3.12"
docs-spelling.requires-python = ">=3.12"
# other tools
ipython.requires-python = ">=3.12"
mypy.requires-python = ">=3.12"
notebook.requires-python = ">=3.12"
nox.requires-python = ">=3.12"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true

[tool.cruft]

[tool.typos.default.extend-words]
datas = "datas"

[tool.typos.default]
extend-ignore-identifiers-re = [ "NDArray.*" ]

[tool.typos.default.extend-identifiers]
NDGeneric = "NDGeneric"
