[build-system]
build-backend = "uv_build"
requires = [
    "uv-build>=0.10.4,<0.11.0",
]

[project]
name = "cmomy"
version = "1.0.4.dev0"
description = "Central (co)moment calculation/manipulation"
readme = "README.md"
keywords = [
    "cmomy",
]
license = "NIST-PD"
license-files = [ "LICENSE" ]
authors = [
    { name = "William P. Krekelberg", email = "wpk@nist.gov" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "docstring-inheritance",
    "lazy-loader",
    "module-utilities>=0.10.1",
    "numba>=0.58,<0.63; python_version<'3.14' and sys_platform=='darwin' and platform_machine=='x86_64'",
    "numba>=0.58; python_version<'3.14' and sys_platform!='darwin' or platform_machine!='x86_64'",
    "numba>=0.63; python_version>='3.14'",
    "numpy>1.24",
    "typing-extensions>=4.10.0",
    "xarray>=2023.9.0",
]

[project.urls]
Documentation = "https://pages.nist.gov/cmomy/"
Homepage = "https://github.com/usnistgov/cmomy"

[dependency-groups]
dev = [
    { include-group = "mypy" },
    { include-group = "notebook" },
    { include-group = "nox" },
    { include-group = "pytest-accept" },
    { include-group = "test" },
    { include-group = "test-notebook" },
    { include-group = "type" },
]
test = [
    "pytest-cov",
    "pytest-env",
    "pytest-sugar",
    { include-group = "pytest" },
    { include-group = "test-scipy" },
]
type = [
    "pandas-stubs",
    { include-group = "pylint" },
    { include-group = "pytest" },
    { include-group = "typecheck-runner" },
]
docs = [
    "autodocsumm",
    "myst-nb",
    "pyenchant",
    "sphinx>=5.3.0",
    # other
    "sphinx-autodoc-typehints",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinxcontrib-spelling",
]
# other groups
basedpyright = [ "basedpyright>=1.31.3" ]
docs-live = [
    "sphinx-autobuild",
    { include-group = "docs" },
]
docs-spelling = [
    "pyenchant",
    "sphinxcontrib-spelling",
    { include-group = "docs" },
]
ipython = [ "ipython" ]
mypy = [ "mypy[faster-cache]>=1.15.0" ]
notebook = [ "ipykernel", "nbclient" ]
nox = [ "nox>=2025.5.1" ]
numpy1 = [ "numpy<3.0" ]
numpy2 = [ "numpy>2.0" ]
pylint = [ "pylint" ]
pytest = [ "pytest" ]
pytest-accept = [ "pytest-accept" ]
test-extras = [
    { include-group = "test" },
]
test-notebook = [
    "dask[diagnostics]",
    "nbval",
    { include-group = "test" },
]
test-scipy = [
    "dask; python_version=='3.13'",
    "scipy; python_version=='3.13'",
]
typecheck-runner = [ "typecheck-runner>=0.1.0; python_version>'3.9'" ]

# * uv -------------------------------------------------------------------------

[tool.uv]
required-version = ">=0.7.15"
default-groups = [ "dev", "numpy2" ]
fork-strategy = "requires-python"
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
managed = true
conflicts = [
    [
        { group = "numpy1" },
        { group = "numpy2" },
    ],
]
build-backend.source-include = [ "tests/**" ]
pip.annotation-style = "line"
pip.generate-hashes = true

[tool.uv.dependency-groups]
dev.requires-python = ">=3.13"
docs.requires-python = ">=3.13"
docs-live.requires-python = ">=3.13"
docs-spelling.requires-python = ">=3.13"
# other tools
ipython.requires-python = ">=3.13"
mypy.requires-python = ">=3.13"
notebook.requires-python = ">=3.13"
nox.requires-python = ">=3.13"

# * Checks ---------------------------------------------------------------------

[tool.repo-review]
ignore = [
    "NOX103", # I prefer using "nox.options.sessions"
    "PC111",  # use doccmd instead of blacken-docs
    "PC140",  # do this externally
    "PC160",  # use typos
    "PC170",  # pygrep
    "PC901",  # ci message
]

[tool.check-wheel-contents]
package_omit = [
    "*.egg-info",
    "*.nbc",
    "*.pyc",
    "*.pyo",
    ".*",
    "__pycache__/*",
]
src_dir = [
    "src",
]
toplevel = [
    "cmomy",
]

[tool.pyproject-fmt]
# max_supported_python = "3.13"
expand_tables = [
    "project.entry-points",
    "project.optional-dependencies",
    "project.scripts",
    "project.urls",
    "tool.mypy.overrides",
    "tool.pyproject2conda",
    "tool.pyright.executionEnvironments",
    "tool.pytest",
    "tool.typos",
    "tool.uv.dependency-groups",
]
indent = 4
keep_full_version = true

[tool.typos.default]
extend-ignore-identifiers-re = [ "NDArray.*" ]

[tool.typos.default.extend-identifiers]
CPY = "CPY"
NDGeneric = "NDGeneric"

[tool.typos.default.extend-words]
arange = "arange"
datas = "datas"

# [tool.typos.type.jupyter]
# extend-ignore-re = ["\"id\": \".*\""]

# * Testing --------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = [
    "--cov-config=pyproject.toml",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--pyargs",
    "--strict-config",
    "--strict-markers",
    "-ra",
]
testpaths = [
    "README.md",
    "cmomy",
    "tests",
]
# options
filterwarnings = [
    "error",
    "ignore: FNV hashing is not implemented in Numba:UserWarning",
    "ignore: Module cmomy was never imported:coverage.exceptions.CoverageWarning",       # test-notebook issue
    "ignore: No data was collected:coverage.exceptions.CoverageWarning",                 # test-notebook issue
    "ignore: __array__ implementation doesn't accept a copy keyword:DeprecationWarning",
]
log_cli_level = "INFO"
log_level = "INFO"
markers = [
    "scipy: test scipy dependent code",
]
minversion = "8"
strict_xfail = "true"

[tool.pytest_env]
NUMBA_CACHE_DIR = { value = "{PWD}/.numba_cache", transform = true, skip_if_set = true }

[tool.coverage]
run.branch = true
paths.source = [
    "src/",
    # needed for testing source if not editable install
    ".nox/**/site-packages/",
]
# show_missing = true
report.exclude_also = [
    "@overload",
    "if TYPE_CHECKING:",
]
report.include = [
    "src/*",
]
report.omit = [
    # No great way to test coverage of guvectorized functions...
    "*/_lib/*.py",
    "*/core/typing_nested_sequence.py",
    "*/options.py",
    "*/vendored/*",
]
report.show_missing = true

# * typecheck ---------------------------------------------------------------------

[tool.mypy]
exclude = [
    ".eggs",
    ".nox",
    ".numba_cache",
    ".tox",
    ".venv",
    "docs",
]
files = [
    "src",
    "tests",
]
strict = true
# options
allow_redefinition_new = true
always_true = [ "MYPY_ONLY" ]
check_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
local_partial_types = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
# project specific
pretty = true
sqlite_cache = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "dask.*",
    "numba.*",
    "scipy.*",
    "scipy.special.*",
    "scipy.stats.*",
]

[[tool.mypy.overrides]]
strict = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false
module = [
    "tests.*",
]

[[tool.mypy.overrides]]
disable_error_code = [
    "arg-type",
    "assignment",
    "call-overload",
]
module = [
    "tests._dataarray_set_utils.*",
    "tests.test_convert.*",
    "tests.test_grouped.*",
    "tests.test_parallel_support.*",
    "tests.test_reduce_validate.*",
    "tests.test_reduction.*",
    "tests.test_resample.*",
    "tests.test_rolling.*",
    "tests.test_utils.*",
    "tests.test_xarray_support.*",
]

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]
project-includes = [ "src", "tests" ]

[tool.pyright]
defineConstant = { MYPY_ONLY = false }
exclude = [
    "**/.mypy_cache",
    "**/.numba_cache",
    "**/__pycache__",
    ".nox/**",
    ".tox/**",
    ".venv/**",
    # "tools/auto_test_typing.py",
]
include = [
    "src",
    "tests",
]
strict = [
    "noxfile.py",
    "src/cmomy/*.py",
    "src/cmomy/core/*.py",
    "src/cmomy/grouped/*.py",
    "src/cmomy/resample/*.py",
    "src/cmomy/wrapper/*.py",
    "tools/*.py",
]
typeCheckingMode = "standard"
# options
# reportMissingSuperCall = true
deprecateTypingAliases = true
enableReachabilityAnalysis = false
enableTypeIgnoreComments = false
reportCallInDefaultInitializer = true
reportImplicitOverride = true
reportImportCycles = true
reportOverlappingOverload = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnreachable = "warning"
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUnusedCallResult = true
# type-checkers should type-check; linters should lint
reportImplicitStringConcatenation = false
reportPrivateImportUsage = false
reportPrivateUsage = false
reportUnusedImport = false
reportUnusedVariable = false
# Needed for pep728 support for TypeDict(closed=...)
enableExperimentalFeatures = true

[[tool.pyright.executionEnvironments]]
reportArgumentType = false
reportCallIssue = false
reportMissingImports = false
reportUnusedCallResult = false
root = "tests"

[[tool.pyright.executionEnvironments]]
reportUnusedCallResult = false
root = "examples/usage"

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
src.include = [ "src", "tests" ]

# * Dependency creation --------------------------------------------------------

[tool.pyproject2conda]
user-config = "config/userconfig.toml"
template-python = "requirements/py{py}-{env}"
template = "requirements/{env}"
name = "py{py}-{env}"
python = "default"
channels = "conda-forge"
style = "yaml"
deps = "pip"

[tool.pyproject2conda.dependencies]
pytest-accept = { pip = true }
lazy-loader = { skip = true, packages = "lazy_loader" }
numba = { skip = true, packages = "numba>=0.57" }

[tool.pyproject2conda.envs.dev]
groups = [ "dev" ]
python = "default"

[tool.pyproject2conda.envs.pre-commit-additional-dependencies]
reqs = [
    "rust-just",
]
skip-package = true
style = "requirements"

[tool.pyproject2conda.envs.test]
groups = [ "test" ]
python = "all"

[tool.pyproject2conda.envs.test-extras]
groups = [ "test-extras" ]
skip-package = true
python = "all"

[tool.pyproject2conda.envs.uvx-tools]
reqs = [
    # these used solely for specking tools to be used with uvx ...
    "conda-lock>=2.5.5",
    "copier",
    "copier-template-extensions>=0.3.1",
    "cruft",
    "grayskull>=2.5.3",
    "nbqa>=1.8.4",
    "prek",
    "pyrefly>=0.37.0",
    "pyright>=1.1.396",
    "scriv",
    "twine>=5.0.0",
    "ty>=0.0.14",
]
groups = [
    "basedpyright",
    "mypy",
    "nox",
    "typecheck-runner",
]
skip-package = true
style = "requirements"

# * Other tools ----------------------------------------------------------------

[tool.scriv]
format = "md"
md_header_level = "2"
new_fragment_template = "file: changelog.d/templates/new_fragment.md.j2"

[tool.commitizen]
use_shortcuts = true
